--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,13 +1,15 @@
 ---
-title: Sigil - Bitcoin Smart Contracts
+title: Sigil Smart Contract Framework for Bitcoin
 description: Build secure and efficient Bitcoin smart contracts with Sigil, powered by WebAssembly and the Kontor protocol.
 hide_table_of_contents: true
 ---
 
 # Sigil
 
-Sigi is an embedded domain specific language for Bitcoin Smart Contracts. It provides a streamlined approach to building contracts on the Kontor metaprotocol, leveraging WebAssembly’s Component Model. Its minimal runtime primitives and userspace abstractions enable secure, gas-efficient contracts with a familiar development experience. Storage is isolated, cross-contract calls are convenient to perform while re-entrances are strictly prohibited, `fallback` hook enables support for contract versioning via proxying.
+Sigil is a next-generation Rust DSL for smart contracts that runs on the Kontor Bitcoin metaprotocol. Unlike other Rust-based smart contract languages, Sigil leverages the WebAssembly Component Model to make the experience of writing smart contracts _as close as possible to that of writing regular software_ while still offering all of the safety and determinism guarantees necessary for a blockchain execution environment.
+
+Its minimal runtime primitives and userspace abstractions enable secure, gas-efficient contracts with a familiar development experience. Storage is isolated, cross-contract calls are convenient to perform while re-entrances are strictly prohibited, `fallback` hook enables support for contract versioning via proxying.
 
 The zip provided to you includes five example contracts demonstrating contract patterns from basic queries to dynamic proxying. Each example includes Rust code, WIT interfaces, and tests. Run `cargo test` in the `test/` directory (e.g., `sigil-example-contracts/hello-world/test`) to simulate blockchain execution and iterate quickly.
 
-[**Read the Introduction to Sigil**](/introduction) to lean more.
+[**Read the Introduction to Sigil**](/introduction) to learn more.
