--- a/docs/kontor/file-storage/file-storage.mdx
+++ b/docs/kontor/file-storage/file-storage.mdx
@@ -1,5 +1,6 @@
 ---
 title: File Storage
+hide_table_of_contents: true
 ---
 
 Storing large files directly in Bitcoin transactions imposes significant costs on the entire network, and this externalization of costs has made on-chain data storage a contentious subject within the Bitcoin community. Moreover, the high cost of embedding data on-chain also limits what's practical to store. Even with witness discounting, storing megabytes of data in Bitcoin transactions is expensive, and storing gigabytes is prohibitive. As a result, many projects today relies on centralized servers or systems like IPFS that don’t actually provide any availability guarantees.
