--- a/docs/kontor/resources/whitepaper.mdx
+++ b/docs/kontor/resources/whitepaper.mdx
@@ -1,8 +1,6 @@
 ---
-title: Kontor Whitepaper
+title: Whitepaper
 ---
-
-# Kontor Whitepaper
 
 The comprehensive Kontor whitepaper provides in-depth technical details about the protocol design, architecture, and implementation.
 
