--- a/docs/kontor/smart-contracts/smart-contracts.mdx
+++ b/docs/kontor/smart-contracts/smart-contracts.mdx
@@ -16,10 +16,4 @@ title: Smart Contracts
 
 ## Learn More
 
-Ready to start building with Sigil? Check out the comprehensive Sigil documentation:
-
-- **[Getting Started](/docs/sigil/getting-started/getting-started)** - Set up your development environment and deploy your first contract
-- **[Examples](/docs/sigil/examples/index/index)** - Learn from working examples including tokens, AMMs, and more
-- **[Reference](/docs/sigil/reference/implementation/implementation)** - Deep dive into Sigil's implementation details
-
-All example contracts with full source code are available in the [`examples/`](https://github.com/KontorProtocol/Documentation/tree/main/examples) directory.
+Ready to start building with Sigil? Check out the [Sigil introduction](/docs/sigil/introduction/introduction).
