--- a/docs/kontor/why-kontor/why-kontor.mdx
+++ b/docs/kontor/why-kontor/why-kontor.mdx
@@ -1,5 +1,6 @@
 ---
 title: Why Build on Kontor?
+hide_table_of_contents: true
 ---
 
 **Build where the value is.** Bitcoin is the deepest, most liquid, and most trusted blockchain network in the world. By building on Kontor, you're tapping directly into Bitcoin's ecosystem—its users, its capital, its security guarantees—without the friction of bridges, wrapped tokens, or convincing people to move to yet another chain. Your applications settle on Bitcoin itself, with the same finality guarantees as BTC transactions. There's no separate network to bootstrap, no additional consensus to trust, and no parasitic relationship with the underlying chain.
