--- a/docs/sigil/examples/pool/pool.mdx
+++ b/docs/sigil/examples/pool/pool.mdx
@@ -7,7 +7,7 @@ title: 7. Liquidity Pool
 
 
 <Note>
-**Full working code**: The complete source code for this example is available in [`examples/pool/`](/examples/pool)
+**Full working code**: The complete source code for this example is available in [`example-contracts/pool/`](https://github.com/KontorProtocol/Documentation/tree/main/example-contracts/pool)
 </Note>
 This example closely mirrors the AMM contract's logic but supports only one token pair. This design allows the pool to implement a token interface, where the pool's token represents shares in the liquidity pool, enabling interaction through standard token methods (demonstrated at the test's end). In a production environment, a middleware application would manage pool creation for users and maintain a mapping of token pairs to pool contract IDs.
 
