--- a/docs/sigil/examples/proxy/proxy.mdx
+++ b/docs/sigil/examples/proxy/proxy.mdx
@@ -7,7 +7,7 @@ title: 5. Proxy
 
 
 <Note>
-**Full working code**: The complete source code for this example is available in [`examples/proxy/`](/examples/proxy)
+**Full working code**: The complete source code for this example is available in [`example-contracts/proxy/`](https://github.com/KontorProtocol/Documentation/tree/main/example-contracts/proxy)
 </Note>
 This example demonstrates proxying (a common pattern used in contract upgrades), utilizing the `fallback` hook and introducing the `foreign::call` built-in and aliased imports.
 
