--- a/docs/sigil/examples/shared-account-dynamic/shared-account-dynamic.mdx
+++ b/docs/sigil/examples/shared-account-dynamic/shared-account-dynamic.mdx
@@ -7,7 +7,7 @@ title: 4. Shared Account (Dynamic)
 
 
 <Note>
-**Full working code**: The complete source code for this example is available in [`examples/shared-account-dynamic/`](/examples/shared-account-dynamic)
+**Full working code**: The complete source code for this example is available in [`example-contracts/shared-account-dynamic/`](https://github.com/KontorProtocol/Documentation/tree/main/example-contracts/shared-account-dynamic)
 </Note>
 This example uses the `interface!` macro and `ContractAddress` type to implement dynamic cross-contract calls.
 
