--- a/docs/sigil/examples/token/token.mdx
+++ b/docs/sigil/examples/token/token.mdx
@@ -3,11 +3,9 @@ sidebar_position: 2
 title: 2. Token
 ---
 
-# Token
-
 
 <Note>
-**Full working code**: The complete source code for this example is available in [`examples/token/`](/examples/token)
+**Full working code**: The complete source code for this example is available in [`example-contracts/token/`](https://github.com/KontorProtocol/Documentation/tree/main/example-contracts/token)
 </Note>
 This example demonstrates persistent storage, user balances, transactions, and error handling for a fungible token.
 
