--- a/docs/sigil/getting-started/getting-started.mdx
+++ b/docs/sigil/getting-started/getting-started.mdx
@@ -1,8 +1,7 @@
 ---
 sidebar_position: 3
+title: Getting Started
 ---
-
-# Getting Started
 
 This guide walks you through setting up the environment to develop and test smart contracts in Sigil on a Unix-like system.
 
