--- a/docs/sigil/reference/move/move.mdx
+++ b/docs/sigil/reference/move/move.mdx
@@ -1,8 +1,8 @@
 ---
 sidebar_position: 4
 title: Kontor vs. Move
+hide_table_of_contents: true
 ---
-# Kontor vs. Move
 
 The biggest difference between the Sigil and Move smart contract systems is that Sigil is an embedded DSL in Rust designed to make writing contracts feel like writing regular Rust code. Sigil's emphasis is on simplicity, readability, and overall developer experience. Move, by contrast, is a novel DSL with Rust-like syntax that implements an idiosyncratic resource-oriented programming model designed to support greater theoretical performance and safety guarantees but requires learning a significant number of new concepts and implementing complex workflows to fit the Move model. Because of precisely these limitations, Move has split into at least two different main versions: Aptos Move and Sui Move, each of which has its own (significant) variations in programming model, and incompatible tooling. As such, the Move ecosystem is fragmented, and the tooling is even less mature than it would be otherwise.
 
