--- a/docs/sigil/examples/amm/amm.mdx
+++ b/docs/sigil/examples/amm/amm.mdx
@@ -7,7 +7,7 @@ title: 6. Automated Market-Maker (AMM)
 This example builds on top of the Token contract and demonstrates swaps and liquidity provision on an AMM. It demonstrates transfers of balances using the `token-dyn` interface for cross-contract calls to the Token contract, and complex integer arithmetic using the 256-bit `Integer` built-in type.
 
 <Note>
-**Full working code**: The complete source code for this example is available in [`examples/amm/`](/examples/amm)
+**Full working code**: The complete source code for this example is available in [`example-contracts/amm/`](https://github.com/KontorProtocol/Documentation/tree/main/example-contracts/amm)
 </Note>
 
 ## WIT Interface
