--- a/docs/sigil/examples/hello-world/hello-world.mdx
+++ b/docs/sigil/examples/hello-world/hello-world.mdx
@@ -3,12 +3,10 @@ sidebar_position: 1
 title: 1. Hello World
 ---
 
-# Sigil "Hello World"
-
 This example illustrates the fundamental structure of a simple Sigil contract, serving as a good starting point for creating your own.
 
 <Note>
-**Full working code**: The complete source code for this example is available in [`examples/hello-world/`](/examples/hello-world)
+**Full working code**: The complete source code for this example is available in [`example-contracts/hello-world/`](https://github.com/KontorProtocol/Documentation/tree/main/example-contracts/hello-world)
 </Note>
 
 ## WIT Interface
