--- a/docs/sigil/examples/shared-account/shared-account.mdx
+++ b/docs/sigil/examples/shared-account/shared-account.mdx
@@ -7,7 +7,7 @@ title: 3. Shared Account
 
 
 <Note>
-**Full working code**: The complete source code for this example is available in [`examples/shared-account/`](/examples/shared-account)
+**Full working code**: The complete source code for this example is available in [`example-contracts/shared-account/`](https://github.com/KontorProtocol/Documentation/tree/main/example-contracts/shared-account)
 </Note>
 This example demonstrates a simple multi-tenant shared account introducing static contract imports, complex storage structs, authorization logic, ID generation, and cross-contract calls.
 
