Remove stray examples index from sidebar and hide TOC on single-subsection pages
- Remove docs/sigil/examples/index/index from sidebar to fix redirect loop
- Add hide_table_of_contents to Core Concepts pages with only one subsection:
  - architecture.mdx (only has 'Indexer Architecture')
  - tokenomics.mdx (only has 'Learn More')
  - smart-contracts.mdx (only has 'Learn More')

--- a/docs/kontor/architecture/architecture.mdx
+++ b/docs/kontor/architecture/architecture.mdx
@@ -1,5 +1,6 @@
 ---
 title: Architecture and Consensus
+hide_table_of_contents: true
 ---
 
 As a metaprotocol on Bitcoin, Kontor uses "**embedded consensus":** metaprotocols derive state from an underlying blockchain without implementing their own consensus mechanism. Bitcoin miners order transactions and secure them with proof-of-work; Kontor indexers process those transactions according to additional rules. Because Bitcoin provides an immutable, timestamped log of all Kontor operations, and because Kontor's execution rules are deterministic, every indexer processing the same Bitcoin history arrives at the same state. There is no voting, no leader election, no validator set—only deterministic computation over a shared input stream.
