--- a/docs/kontor/smart-contracts/smart-contracts.mdx
+++ b/docs/kontor/smart-contracts/smart-contracts.mdx
@@ -1,5 +1,6 @@
 ---
 title: Smart Contracts
+hide_table_of_contents: true
 ---
 
 **Sigil is Kontor's smart contract framework.** Sigil is a next-generation WebAssembly-based framework for writing, deploying, and executing smart contracts on Bitcoin through the Kontor metaprotocol. It is designed to make contract development feel like writing normal software rather than learning a specialized domain-specific language. Developers who know Rust can write Sigil contracts with minimal additional concepts, using familiar tools like `cargo` and the Rust analyzer. Contracts compile to WebAssembly bytecode, which is then published to Bitcoin in a Kontor transaction and executed by indexers when called.
