--- a/docs/kontor/faq/faq.mdx
+++ b/docs/kontor/faq/faq.mdx
@@ -15,11 +15,11 @@ Ordinals and Runes are also metaprotocols, so they share Kontor's security model
 
 **How is Kontor different from Alkanes?**
 
-Alkanes and Kontor are both Bitcoin metaprotocols with WebAssembly smart contracts, but they have very different functionality in practice. Architecturally, Alkanes is exclusively UTXO-based and builds partially on Runes infrastructure with no separate gas token. Kontor uses a hybrid accounts/UTXO model that supports both stateful smart contracts—avoiding the concurrency issues of Alkanes’ purely UTXO-based system—and Bitcoin interoperability through atomic swaps. Kontor also has KOR as a native currency with tokenomics designed for gas metering and file storage incentives. For information on the differences in the smart contract systems, see  https://unspendablelabs.github.io/sigil-docs/reference/alkanes.
+Alkanes and Kontor are both Bitcoin metaprotocols with WebAssembly smart contracts, but they have very different functionality in practice. Architecturally, Alkanes is exclusively UTXO-based and builds partially on Runes infrastructure with no separate gas token. Kontor uses a hybrid accounts/UTXO model that supports both stateful smart contracts—avoiding the concurrency issues of Alkanes' purely UTXO-based system—and Bitcoin interoperability through atomic swaps. Kontor also has KOR as a native currency with tokenomics designed for gas metering and file storage incentives. For information on the differences in the smart contract systems, see [Kontor vs. Alkanes](/docs/sigil/reference/alkanes/alkanes).
 
 **How is Kontor different from Move-based chains?**
 
-Move (used by Aptos and Sui) is a novel programming language with its own syntax, resource-oriented programming model, and tooling ecosystem. Learning Move means learning a new language with unfamiliar concepts like "abilities" and "acquires" declarations. Sigil is an embedded DSL in Rust: if you know Rust, you can write Sigil contracts immediately using familiar tools and libraries. For more information, see https://unspendablelabs.github.io/sigil-docs/reference/move.
+Move (used by Aptos and Sui) is a novel programming language with its own syntax, resource-oriented programming model, and tooling ecosystem. Learning Move means learning a new language with unfamiliar concepts like "abilities" and "acquires" declarations. Sigil is an embedded DSL in Rust: if you know Rust, you can write Sigil contracts immediately using familiar tools and libraries. For more information, see [Kontor vs. Move](/docs/sigil/reference/move/move).
 
 ## BTC and KOR
 
@@ -61,7 +61,7 @@ Gas costs have two components: Bitcoin transaction fees (paid in BTC) and execut
 
 **How do I get started developing?**
 
-Install Rust and the Sigil SDK, then follow the getting started guide in the documentation. (https://unspendablelabs.github.io/sigil-docs/) The SDK includes example contracts (token, NFT, simple DeFi primitives) that demonstrate common patterns. The SDK provides testing utilities so you can write unit and integration tests that execute locally before deploying. Join the developer community for support and to see what others are building!
+Install Rust and the Sigil SDK, then follow the [getting started guide](/docs/sigil/getting-started/getting-started) in the documentation. The SDK includes example contracts (token, NFT, simple DeFi primitives) that demonstrate common patterns. The SDK provides testing utilities so you can write unit and integration tests that execute locally before deploying. Join the developer community for support and to see what others are building!
 
 **Does Kontor support NFTs?**
 
