--- a/docs/sigil/reference/implementation/implementation.mdx
+++ b/docs/sigil/reference/implementation/implementation.mdx
@@ -76,7 +76,7 @@ Creates custom errors for result types in transaction failures.
 
 ## Contract Macro
 
-`contract!(name = "name")`: Defines the contract name and generates boilerplate Rust code based on the contract's WIT filekj.
+`contract!(name = "name")`: Defines the contract name and generates boilerplate Rust code based on the contract's WIT file.
 
 ## Import Macro
 
