--- a/docs/sigil/reference/numerics/numerics.mdx
+++ b/docs/sigil/reference/numerics/numerics.mdx
@@ -19,9 +19,9 @@ Both types supports basic arithmetic operations (`add`, `sub`, `mul` and `div`) 
 
 Basic operations can be performed using regular operators, so you can simply do things like `if a + b > c` with both types.
 
-## Checked arithmetics
+## Checked arithmetic
 
-For checked arithmetics, use the respective methods implemented by the types, which return `Result<T, Error>` where `Error` will be `Error::Overflow` or `Error::DivByZero` if either of these conditions have occurred.
+For checked arithmetic, use the respective methods implemented by the types, which return `Result<T, Error>` where `Error` will be `Error::Overflow` or `Error::DivByZero` if either of these conditions have occurred.
 
 Example:
 ```
