Fix Table of Contents Hiding

--- a/docs/kontor/introduction.mdx
+++ b/docs/kontor/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: What is Kontor?
-hide_table_of_contents: true
+mode: wide
 ---
 
 Kontor is a Bitcoin metaprotocol that brings programmable assets and verifiable long-term file storage directly to Bitcoin. Unlike sidechains or rollups that create separate networks, Kontor operates entirely on Bitcoin itself—every Kontor transaction is a Bitcoin transaction, secured by Bitcoin's full hashpower and finality guarantees. This means you can build and deploy sophisticated applications on Bitcoin without leaving the Bitcoin network or trusting additional consensus mechanisms.
