--- a/docs/kontor/tokenomics.mdx
+++ b/docs/kontor/tokenomics.mdx
@@ -1,6 +1,6 @@
 ---
 title: KOR and Tokenomics
-hide_table_of_contents: true
+mode: wide
 ---
 
 **BTC is the gold; KOR is the gas.** Kontor respects BTC's primacy as digital money and the network's unit of account. BTC is what users hold, what assets are priced in, and what atomic swaps settle in. KOR's economic model, by contrast, was designed specifically for data storage and smart contract execution. Bitcoin's deflationary tokenomics—fixed supply, periodic halvings—make it excellent as a store of value but unsuited for incentivizing perpetual storage or metering computation. KOR fills this gap as a complementary utility token. Users acquire KOR through on-chain atomic swaps with BTC when they need to execute contracts or store files, making the interaction seamless.
