--- a/docs/sigil/examples/index/index.mdx
+++ b/docs/sigil/examples/index/index.mdx
@@ -3,7 +3,7 @@ id: examples
 title: Examples
 sidebar_label: Examples
 sidebar_position: 2
-hide_table_of_contents: true
+mode: wide
 ---
 
 This section covers the five example contracts in `sigil-example-contracts/`: `hello-world`, `token`, `shared-account`, `shared-account-dynamic`, `proxy`. Each of these self-contained examples builds on the concepts introduced in previous one to demonstrate how to develop a full-featured contract with Sigil. The examples progress from a minimal contract to a token system, shared account, dynamic shared account, and proxy pattern, showing how to develop blockchain smart contracts with seamless Rust-like testing and rapid feedback in a local development environment.
