--- a/docs/kontor/resources/whitepaper.mdx
+++ b/docs/kontor/resources/whitepaper.mdx
@@ -1,5 +1,6 @@
 ---
 title: Whitepaper
+mode: wide
 ---
 
 The comprehensive Kontor whitepaper provides in-depth technical details about the protocol design, architecture, and implementation.
