--- a/docs/sigil/introduction.mdx
+++ b/docs/sigil/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 1
 title: Introduction
-description: Introduction to Sigil
+mode: wide
 ---
 
 Sigil is a **next-generation WebAssembly-based smart contract framework** that enables developers to develop, deploy, and run rich smart contract applications on Bitcoin with the Kontor metaprotocol. Sigil is designed to offer strong compile-time type safety, powerful language built-ins, an expressive storage interface, rich native types, native cross-contract calls and excellent overall ergonomics.
