Working on Economics Docs

--- a/docs/sigil/introduction.mdx
+++ b/docs/sigil/introduction.mdx
@@ -4,7 +4,7 @@ title: Introduction
 mode: wide
 ---
 
-Sigil is a **next-generation WebAssembly-based smart contract framework** that enables developers to develop, deploy, and run rich smart contract applications on Bitcoin with the Kontor metaprotocol. Sigil is designed to offer strong compile-time type safety, powerful language built-ins, an expressive storage interface, rich native types, native cross-contract calls and excellent overall ergonomics.
+**Sigil** is a **next-generation WebAssembly-based smart contract framework** that enables developers to develop, deploy, and run rich smart contract applications on Bitcoin with the Kontor metaprotocol. Sigil is designed to offer strong compile-time type safety, powerful language built-ins, an expressive storage interface, rich native types, native cross-contract calls and excellent overall ergonomics.
 
 **Attention:** Sigil is currently in *early-preview* and available to select developers for feedback and review. Developers can write smart contracts with Sigil, but not yet execute them with the Kontor Indexer or deploy them to a Bitcoin network.
 
